# SEMA

./: .coverage-tmp.html  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  APInameseq.txt  CHANGELOG.html  CNAME  CONTRIBUTING.html  Dockerfile.sema  Dockerfile.sema.cuda  Dockerfile.sema.fix  Dockerfile.sema.fl  Dockerfile.sema.pypy  Dockerfile.sema.webapp  LICENSE  Makefile  MergeGspan.py  README.md  READMEPACKAGE.md  README_tmp.md  TODO.md  ToolChain.spec  __init__.py  automate_mkdocs.html  automate_mkdocs.py  contributing.html  docker-compose.deploy.yml  eval_ml.ipynb  eval_n.ipynb  eval_randgnn.ipynb  gdb.py  generate_cert.sh  home.html  index.html  install.sh  install.txt  mapping.txt  (+19 more)
.github/: dependabot.yml
.github/workflows/: .pre-commit-config.yaml  pr-generate-docs.yaml  pre-commit.yml  python-app.yml  python-package.yml
.ipynb_checkpoints/: eval_ml-checkpoint.ipynb  eval_randgnn-checkpoint.ipynb
SemaSCDG/: Dockerfile  Dockerfile-pypy  README.md  SemaSCDG.py  TODO.md  docker-compose.yml  mapping.txt  requirements.txt  requirements_pypy.txt
SemaSCDG/SCDGHelper/: ArgumentParserSCDG.py  GraphBuilder.py
SemaSCDG/application/: SCDGApp.py  SemaSCDG.py  TODO.txt  config.ini  default_config.ini  mapping.txt  restore_defaults.py
SemaSCDG/explorer/: SemaExplorerCDFS.py  SemaExplorerChooseDFS.py
SemaSCDG/plugin/: PluginEnvVar.py  win32.py
SemaWebApp/: .flaskenv  Dockerfile  SemaServer.py  docker-compose.deploy.yml  docker-compose.yml  requirements.txt  run.py  setup.py
SemaWebApp/application/: SemaServer.py
SemaWebApp/sema_webapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
SemaWebApp/templates/: downloader.html  index.html  result-global.html  results.html
Tutorial/Notebook/: Deep Learning Model Demo.ipynb  SEMA Federated Learning .ipynb  SEMA-SCDG Demo.ipynb
database/Binaries/: compress_db.sh  extract_deploy_db.sh
databases/: compress_db.sh  extract_deploy_db.sh
doc/: README.md  README_pypi.md  Update_pypi_dockerhub.md  epidoc.conf  gen_ref_pages.py  generate_doc.py  mkgendocs.yaml
doc/epydoc/: api-objects.txt  class-tree.html  frames.html  help.html  identifier-index.html  module-tree.html  posixpath-module.html  posixpath-pysrc.html  re-module.html  re-pysrc.html  re.Scanner-class.html  redirect.html  src-module.html  src-pysrc.html  src.ToolChainWorker-module.html  src.ToolChainWorker-pysrc.html  src.ToolChainWorker.ToolChainWorker-class.html  src.ToolChainWorkerExplorer-module.html  src.ToolChainWorkerExplorer-pysrc.html  src.ToolChainWorkerExplorer.ToolChainWorker-class.html  src.explorer-module.html  src.explorer-pysrc.html  src.explorer.ToolChainExplorer-module.html  src.explorer.ToolChainExplorer-pysrc.html  src.explorer.ToolChainExplorer.ToolChainExplorer-class.html  src.explorer.ToolChainExplorerBFS-module.html  src.explorer.ToolChainExplorerBFS-pysrc.html  src.explorer.ToolChainExplorerBFS.ToolChainExplorerBFS-class.html  src.explorer.ToolChainExplorerCBFS-module.html  src.explorer.ToolChainExplorerCBFS-pysrc.html  src.explorer.ToolChainExplorerCBFS.ToolChainExplorerCBFS-class.html  src.explorer.ToolChainExplorerCDFS-module.html  src.explorer.ToolChainExplorerCDFS-pysrc.html  src.explorer.ToolChainExplorerCDFS.ToolChainExplorerCDFS-class.html  src.explorer.ToolChainExplorerDFS-module.html  src.explorer.ToolChainExplorerDFS-pysrc.html  src.explorer.ToolChainExplorerDFS.ToolChainExplorerDFS-class.html  src.explorer.ToolChainExplorerNoTry-module.html  src.explorer.ToolChainExplorerNoTry-pysrc.html  src.explorer.ToolChainExplorerNoTry.ToolChainExplorerNoTry-class.html  (+725 more)
doc/pyreverse/: classes_toolchain.plain  command  packages_toolchain.json  packages_toolchain.plain
docs/: index.html
docs/sources/: index.md
malwexp/: Loki.txt
penv-fix/HTMLTestRunner/: runner.py
penv-fix/angr/: calling_conventions.py  dirty.py  heap_base.py  stack_pointer_tracker.py
penv-fix/angr-9.21/: __init__.py  threading.py
penv-fix/z3/: z3core.py
reference/: SUMMARY.html
reference/sema_toolchain/: index.html  sema_cli.html
script/: Command.md  Evaluate_time.sh  SymbionExample.py  SymbionExample2.py  SymbionExample3.py  SymbionExample4.py  convert_json.py  install_pack.sh  monitor.sh  move_files_dataset.py  similarity_sig_GSPAN.py  test_all.sh
scripts/: udpate.py
search/: search_index.json
sema-toolchain/: docker-compose.deploy.yml
sema-toolchain/sema_classifier/: Dockerfile  (+2 more)
sema_classifier/: Dockerfile  README.md  TODO.md  docker-compose.yml  docker_startup.sh  requirements.txt
sema_scdg/: Dockerfile  Dockerfile-pypy  README.md  TODO.txt  docker-compose.yml  requirements.txt  requirements_pypy.txt
sema_toolchain/: Makefile  docker-compose.deploy.dev.yml  docker-compose.deploy.yml  sema_cli.py
sema_web_app/: Dockerfile  TODO.txt  docker-compose.yml
src/: .gitignore  CeleryTasks.py  CeleryTasksClassifier.py  CeleryTasksSCDG.py  Sema.py  SemaFL.py  TODO.md  ToolChain.py  ToolChainFL.py  __init__.py  analyze.py  avg_vec_stats_cv_fginjk.csv  avg_vec_stats_cv_ginjk.csv  avg_vec_stats_cv_rgin.csv  bodmas_mapping_hash.json  detect_stats_cv_fginjk.csv  detect_stats_cv_ginjk.csv  detect_stats_cv_rgin.csv  detect_tmp_avg_stats_cv_fginjk.csv  detect_tmp_avg_stats_cv_ginjk.csv  detect_tmp_avg_stats_cv_rgin.csv  detect_tmp_folds_stats_cv_fginjk.csv  detect_tmp_folds_stats_cv_ginjk.csv  detect_tmp_folds_stats_cv_rgin.csv  file_counter.py  final_hashes_mapping.json  folds_vec_stats_cv_fginjk.csv  folds_vec_stats_cv_ginjk.csv  folds_vec_stats_cv_rgin.csv  gen_scdgs_script.py  hash_mapping.py  hashes_mapping.json  mapping.txt  mapping_pandi.json  ml_eval_script.py  public_key.pem  run_master.sh  run_worker.sh  setup_network.sh  stats_cv_fginjk.csv  (+34 more)
submodules/SEMA-quickspan/: CMakeLists.txt  Dockerfile  LICENCE.txt  README.md  config.h.in
submodules/SEMA-quickspan/include/: common.h  database.h  output.h  quickspan.h
submodules/SEMA-quickspan/src/: database.cc  l_malloc.c  output.cc  quickspan_count.cc  quickspan_execute.cc  quickspan_mine.cc
test/: HypothesisExamples.py  SimpleTest.py  readme.md
(+23850 files in other folders)
